# jailrun

./: .gitignore  Makefile  README.md  pyproject.toml  zensical.toml
.github/workflows/: tests.yml
docs/: index.md
docs/commercial/: cloud.md  faq.md  offer.md  services.md
docs/get-started/: installation.md  quickstart.md
docs/overrides/: home.html
docs/reference/: base-config.md  cli.md  env-settings.md  how-it-works.md  jail-config.md  jrun-cmd.md  jrun-down.md  jrun-interactive.md  jrun-pair.md  jrun-pause.md  jrun-purge.md  jrun-snapshot.md  jrun-ssh.md  jrun-start.md  jrun-status.md  jrun-stop.md  jrun-up.md  mesh.md  networking.md  state.md
docs/resources/: posts.md  resources.md  videos.md
docs/stylesheets/: extra.css
docs/tutorials/: hub-playbooks.md  showcase.md  snapshots.md  testing-framework.md  wiring.md
examples/: app.py  base.ucl  fastapi-313.ucl  fastapi-313.yml  fastapi-314-pg.ucl  imagor.ucl  nginx.ucl  postgres.ucl  python-314.yml  python-server.ucl  redis.ucl  stack.ucl
examples/fastapi/: app.py  fastapi-313.ucl  fastapi-313.yml  fastapi-314-pg.ucl  fastapi-314-stack.ucl  fastapi-314.yml  pyproject.toml  python-314.ucl  python-314.yml
examples/labs/: astronvim.ucl  gitea.ucl  haproxy.ucl  http-server.ucl  httpserver.ucl  hugo-nginx.ucl  hugo.ucl  hugoplate.ucl  i2pd.ucl  stack.ucl
examples/playbooks/: python-314.yml
playbooks/: export.yml  jail-create.yml  jail-forwards.yml  jail-start.yml
site/: 404.html  index.html  search.json
site/markdown/: index.html
site/overrides/: home.html
src/jailrun/: __init__.py  ansible.py  cli.py  config.py  (+13 more)
tests/: conftest.py  influxdb.ucl  mariadb.ucl  mysql.ucl  postgres.ucl  redis.ucl  test_config.py  test_influx.py  test_mariadb.py  test_mysql.py  test_network.py  test_postgres.py  test_qemu.py  test_redis.py  test_remote.py  test_settings.py  test_ucl.py
(+123 files in other folders)
